--- a/index.html
+++ b/index.html
@@ -69,6 +69,33 @@
       information associated with it at any time. Please note that some
       information may remain in our records even after you delete your account.
     </p>
+    <h2 id="user-generated-content-precautions">
+      User-Generated Content Precautions
+    </h2>
+    <p>
+      We take specific precautions to moderate content and prevent abusive
+      behavior on our app. By using the app, you agree to the following:
+    </p>
+    <ul>
+      <li>
+        Terms and Conditions: You must agree to the End-User License Agreement
+        (EULA) and our terms of service, which make it clear that there is no
+        tolerance for objectionable content or abusive users.
+      </li>
+      <li>
+        Filtering objectionable content: We have a method for filtering
+        objectionable content and removing it from the app.
+      </li>
+      <li>
+        Blocking abusive users: We have a mechanism for users to block abusive
+        users from contacting them.
+      </li>
+      <li>
+        Reporting objectionable content: We act on objectionable content reports
+        within 24 hours by removing the content and ejecting the user who
+        provided the offending content.
+      </li>
+    </ul>
     <h2 id="security">Security</h2>
     <p>
       We take reasonable measures to protect your information from unauthorized
